--- a/dashboard/mybuild/index.html
+++ b/dashboard/mybuild/index.html
@@ -38,7 +38,13 @@
 
   <div class="row">
 	  <div class="col-md-12">
-		  <canvas id="graph" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
+		  <canvas id="graph_this_week" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
+		  </canvas>
+	  </div>
+  </div>
+  <div class="row">
+	  <div class="col-md-12">
+		  <canvas id="graph_last_week" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
 		  </canvas>
 	  </div>
   </div>
