js update functions for all donuts

--- a/dashboard/mybuild/index.html
+++ b/dashboard/mybuild/index.html
@@ -34,17 +34,34 @@
   </head>
 
   <body>
-  Hello	
 
+  This week
   <div class="row">
 	  <div class="col-md-12">
 		  <canvas id="graph_this_week" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
 		  </canvas>
 	  </div>
   </div>
+
+  Last week
   <div class="row">
 	  <div class="col-md-12">
 		  <canvas id="graph_last_week" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
+		  </canvas>
+	  </div>
+  </div>
+
+  This Month
+  <div class="row">
+	  <div class="col-md-12">
+		  <canvas id="graph_this_month" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
+		  </canvas>
+	  </div>
+  </div>
+  Last Month
+  <div class="row">
+	  <div class="col-md-12">
+		  <canvas id="graph_last_month" class="inner cover" width="250" height="210" style="width: 125px; height: 105px;">
 		  </canvas>
 	  </div>
   </div>
