stacked area chart

--- a/dashboard/mybuild/index.html
+++ b/dashboard/mybuild/index.html
@@ -13,14 +13,8 @@
 	<script src="js/jquery-3.2.0.min.js"></script>
 
     <script src="js/charts.js"></script>
+    <script src="js/fetch_data.js"></script>
 	
-	
-
-	<script type="text/javascript">
-	</script>
-
-
-
     <title>Time Parse Dashboard</title>
 
     <!-- Bootstrap core CSS -->
@@ -67,7 +61,14 @@
   </div>
   
 
-    <script src="js/fetch_data.js"></script>
+	<script>
+
+	updateThisWeekDoughnut();
+	updateLastWeekDoughnut();
+	updateThisMonthDoughnut();
+	updateLastMonthDoughnut();
+
+	</script>
 
 </body></html>
   
